# playingCardsLib

./: CMakeLists.txt  LICENSE  README.md  _library.h  deck_lib_test.cpp  library.cpp  library.h  main.cpp
cardGamesLib/cardClass/: framework.h
cardGamesLib/cardGamesLib/: cardGamesLib.cpp  cardGamesLib.vcxproj.filters
cardGamesLib/war/: framework.h
old/: cardGamesLib.sln
old/cardClass/: cardClass.cpp  cardClass.h  cardClass.vcxproj  cardClass.vcxproj.filters
old/cardGamesLib/: cardGamesLib.vcxproj  framework.h
old/solitaire/: framework.h  solitaire.h  solitaire.vcxproj  solitaire.vcxproj.filters
old/war/: war.cpp  war.h  war.vcxproj  war.vcxproj.filters
playingCardsLib/: library.cpp  library.h
